# Distributed-Search-Engine

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  go.work  go.work.sum
api-gateway/: Dockerfile  go.mod  go.sum
api-gateway/cmd/gateway/: main.go
api-gateway/internal/cache/: redis.go
api-gateway/internal/middleware/: logging.go  metrics.go
docs/: api.md  architecture.md
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/results/: page.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
load-testing/: index-load.js  search-load.js
monitoring/grafana/dashboards/: search-engine.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
query-coordinator/: Dockerfile  go.mod
query-coordinator/cmd/coordinator/: main.go
query-coordinator/internal/aggregator/: aggregator.go
query-coordinator/internal/coordinator/: coordinator.go
query-coordinator/internal/shard/: client.go
scripts/: generate-proto.sh  seed-data.sh
shard-node/: CMakeLists.txt  Dockerfile
shard-node/src/: main.cpp
shard-node/src/index/: inverted_index.cpp  inverted_index.h  tokenizer.cpp  tokenizer.h
shard-node/src/metrics/: metrics.cpp  metrics.h
shard-node/src/server/: http_server.cpp  http_server.h
shared/: go.mod
shared-proto/search/v1/: shard.proto
shared/types/: types.go
